<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:shadowColor="@color/main_shadow"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="@color/ocean_main"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="45sp"
        android:backgroundTint="@color/ocean_main"
        android:drawableLeft="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogo" />

    <EditText
        android:id="@+id/inputPhoneNumberR"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/ocean_main"
        android:drawableLeft="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/Phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputPasswordR"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/ocean_main"
        android:drawableLeft="@drawable/ic_security"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputPhoneNumberR"
        app:layout_constraintStart_toStartOf="@+id/inputPhoneNumberR"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumberR" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundstyle"
        android:fontFamily="@font/fredoka_one"
        android:paddingLeft="27sp"
        android:paddingTop="7sp"
        android:paddingRight="27sp"
        android:paddingBottom="7sp"
        android:text="@string/Lets_start"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/inputPasswordR"
        app:layout_constraintStart_toStartOf="@+id/inputPasswordR"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordR" />

    <TextView
        android:id="@+id/AlreadyHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/fredoka_one"
        android:onClick="moveToLogin"
        android:shadowColor="@color/main_shadow"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="30"
        android:text="@string/Register_footer"
        android:textColor="@color/ocean_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonReg"
        app:layout_constraintStart_toStartOf="@+id/buttonReg" />

</androidx.constraintlayout.widget.ConstraintLayout>