<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:shadowColor="@color/main_shadow"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="@color/ocean_main"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <EditText
        android:id="@+id/inputPhoneNumberL"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/ocean_main"
        android:drawableLeft="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/Phone_number"
        android:inputType="phone"
        android:textColorHighlight="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inputPasswordL"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/ocean_main"
        android:drawableLeft="@drawable/ic_security"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:longClickable="false"
        android:paddingRight="10sp"
        android:textColorHighlight="#000000"
        app:layout_constraintEnd_toEndOf="@+id/inputPhoneNumberL"
        app:layout_constraintStart_toStartOf="@+id/inputPhoneNumberL"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumberL" />


    <Button
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/roundstyle"
        android:fontFamily="@font/fredoka_one"
        android:onClick="moveToMain"
        android:paddingLeft="35sp"
        android:paddingTop="7sp"
        android:paddingRight="35sp"
        android:paddingBottom="7sp"
        android:text="@string/Login"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/inputPasswordL"
        app:layout_constraintStart_toStartOf="@+id/inputPasswordL"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordL" />


    <TextView
        android:id="@+id/DoNotHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/fredoka_one"
        android:onClick="moveToReg"
        android:shadowColor="@color/main_shadow"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="30"
        android:text="@string/Login_footer"
        android:textColor="@color/ocean_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>